Fix: Corrected style issue where long words could continue overflowing the page, added break-word css to stop this being used as vandalism. Also correct height issue for key-details container.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -552,7 +552,6 @@ a.button{
 .key-details-container{
     padding: 2rem 2rem 1rem 2rem;
     background: teal;
-    max-height: 29rem;
     color: aliceblue;
 }
 
@@ -594,6 +593,7 @@ a.button{
     margin-right: 1rem;
     margin-bottom: 2rem;
     border-bottom: 2px dashed lightslategrey;
+    word-break: break-word;
 }
 
 .directions li:last-child{
@@ -1117,12 +1117,12 @@ a.button{
     }
 
     .search-header{
-        height: 35rem;
+        height: 32rem;
     }
 
     .search-box {
         margin: auto;
-        margin-top: 16rem;
+        margin-top: 13rem;
         padding: 2rem 2rem;
         width: 75%;
         background-color: teal;
@@ -1196,6 +1196,11 @@ a.button{
 
     .featured{
         padding: 2rem 18%;
+    }
+
+    .key-details-container{
+        padding: 1rem 4rem;
+        max-height: 29rem;
     }
 
     .walk-header{
